# shapes

./: .gitignore  CMakeLists.txt  README.md
doc/uml/figure diagramm UML/: README.txt
include/: README.txt
modules/core/shape2D/: CMakeLists.txt  Makefile  Shape2D.cpp  Shape2D.hpp  Shapes2D.cpp  Shapes2D.hpp  cmake_install.cmake  main.cpp
modules/visualization/shape2D/: ViewShape2D.cpp  ViewShape2D.hpp  ViewShapes2D.cpp  ViewShapes2D.hpp
source/: Shape2D.cpp  Shape2D.hpp  Shapes2D.cpp  Shapes2D.hpp  main.cpp
uml/: procrustAnalysis.zargo
unity test/: README.txt
